--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
@@ -5,9 +5,9 @@
 
 \section*{Latest Won and Lost Accounts}
 
-There are five project managers in \href{${url:about/teams}}{our team}. Each of them
+There are five project managers in <?=$this->href('about/teams', 'our team')?>. Each of them
 works with one project (sometimes with two). Projects usually take 6-10 months during an average 
-\href{${url:process/time/schedule}}{schedule} duration. We
+<?=$this->href('process/time/schedule', 'schedule')?> duration. We
 complete 6-10 projects annually. This is a list of the best ten accounts we have served 
 for the last two years:
 	       
@@ -28,7 +28,7 @@ Wikifox.de &amp; 	MediaWiki based search portal &amp; 	Germany &amp;	850 \\
 MySellerSpace &amp; 	Web trading system &amp; 		USA &amp;	680 \\
 \end{tabular}\end{center}
 
-Sometimes projects fail for \href{${url:process/risk/risk}}{different reasons}. This is a list of 
+Sometimes projects fail for <?=$this->href('process/risk/risk', 'different reasons')?>. This is a list of 
 three accounts we unfortunately lost during the last two years and the corresponding causes
 for those losses:
 
@@ -61,6 +61,6 @@ Bild.ag &amp; 		Business objectives were not taken
 \end{mpxtabular}\end{center}
 
 In order to keep the level of failed projects low we do 
-regular process improvement, \href{${url:process/risk}}{risk management}, 
+regular process improvement, <?=$this->href('process/risk', 'risk management')?>, 
 training and education of project managers, 
-\href{${url:process/quality}}{quality} control and assurance.
+<?=$this->href('process/quality', 'quality')?> control and assurance.
