--- a/php/src/application/tikz/common-header.tex
+++ b/php/src/application/tikz/common-header.tex
@@ -3,8 +3,18 @@
 %% @version $Id$
 %%
 
-\usepackage{array,multirow,setspace,colortbl,tabularx,booktabs,paralist,amsmath,xtab,chngpage}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{setspace}
+\usepackage{colortbl}
+\usepackage{tabularx}
+\usepackage{booktabs}
+\usepackage{paralist}
+\usepackage{amsmath}
+\usepackage{xtab}
+\usepackage{chngpage}
 \usepackage{tocloft}
+\usepackage{enumitem} % for better definition of \item...
 \usepackage{tikz}
 	\usetikzlibrary{shapes,arrows,shadows,trees,fit,positioning}
 	\usetikzlibrary{decorations.pathmorphing}
