--- a/php/src/application/tikz/pdf-header.tex
+++ b/php/src/application/tikz/pdf-header.tex
@@ -95,4 +95,6 @@
 {\end{list}}
 
 % for proper formatting of {description} environment
-\renewcommand*\descriptionlabel[1]{\fontfamily{phv}\selectfont\color{tpcBlack}``#1''}
+%\renewcommand*\descriptionlabel[1]{\fontfamily{phv}\selectfont\color{tpcBlack}``#1''}
+\setdescription{font=\fontfamily{phv}\selectfont\color{tpcBlack}\bfseries,
+	leftmargin=0pt, itemindent=0pt}
