--- a/php/src/application/tikz/common-header.tex
+++ b/php/src/application/tikz/common-header.tex
@@ -14,6 +14,7 @@
 \usepackage{xtab}
 \usepackage{chngpage}
 \usepackage{tocloft}
+\usepackage{eurosym} % EUR symbol to enable, use \euro{}
 \usepackage{enumitem} % for better definition of \item...
 \usepackage{tikz}
 	\usetikzlibrary{shapes,arrows,shadows,trees,fit,positioning}
