--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ScheduleEstimate.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/ScheduleEstimate.tex
@@ -61,7 +61,7 @@ project milestones (in form of a \href{http://en.wikipedia.org/wiki/Gantt_chart}
 		anchor=west,
 		font=\scriptsize,
 		fill=white,
-		text=tpcGrey
+		text=tpcBlue!40,
 	]
 
 	\tikzstyle{connector} = [
@@ -85,8 +85,12 @@ project milestones (in form of a \href{http://en.wikipedia.org/wiki/Gantt_chart}
 	<?=$this->sheet->getChart()?>
 \end{wideTable}
 
-Total planned project duration is <?=$this->sheets['Offer']->duration?>{}
+Total optimistic project duration is <?=$this->sheets['Offer']->duration?>{}
 months. The Gantt Chart above indicates a preliminary allocation of
-work packages and milestones in project timeline:
+work packages and milestones in the project timeline:
 
 <?=$this->itemize($this->sheet->works, 'description')?>
+
+Pessimistic scenario is rather possible, since now we're very uncertain
+of future project risks, results and decisions. Most likely project timeline
+will be somewhere between our optimistic and pessimistic plans.
