--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/References.tex
@@ -1,6 +1,6 @@
 %%
 %% Copyright TechnoPark Corp., 2010
-%% @version $Id: RiskAnalysis.tex 677 2010-02-15 21:20:44Z yegor256@yahoo.com $
+%% @version $Id$
 %%
 
 \section*{List of References}
