--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/SAO.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/SAO.tex
@@ -1,6 +1,6 @@
 %%
 %% Copyright TechnoPark Corp., 2010
-%% @version $Id: Vision.tex 656 2010-02-11 08:37:02Z yegor256@yahoo.com $
+%% @version $Id$
 %%
 
 \section*{Software Architecture Overview}
