produce offers in PDF automatically

--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
@@ -20,10 +20,10 @@ The company employs 12 full-time and over 70 part-time managers and engineers.
 Company shareholders and directors are:
 
 \begin{tabular}{llll}
-Name &amp; 		Citizenship &amp; 	BoD Position &amp; 	Shares \\
+Name & 		Citizenship & 	BoD Position & 	Shares \\
 \hline
-\href{mailto:egor@technoparkcorp.com}{Yegor Bugayenko}	&amp; 	Ukraine &amp;		President &amp; 	50\% \\
-\href{mailto:noah@technoparkcorp.com}{Noah Lieske} &amp;	United States &amp; 	Vice President &amp; 	50\% \\
+\href{mailto:egor@technoparkcorp.com}{Yegor Bugayenko}	& 	Ukraine &		President & 	50\% \\
+\href{mailto:noah@technoparkcorp.com}{Noah Lieske} &amp;	United States & 	Vice President & 	50\% \\
 \end{tabular}
 
 Yegor Bugayenko, 33 y.o, is a certified 
