ignore empty offers

--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
@@ -34,36 +34,38 @@
 \end{flushright}
 \clearpage
 
-\clearpage
-\section*{Cover Letter}
+<? if ($this->sheets['Offer']->hasPrice()): ?>
+    \clearpage
+    \section*{Cover Letter}
 
-Dear <?=$this->tex(FaZend_Bo_Name::factory($this->sheets['Contacts']->fullname)->first)?>,
+    Dear <?=$this->tex(FaZend_Bo_Name::factory($this->sheets['Contacts']->fullname)->first)?>,
 
-In reply to your request we are sending you the documents (in PDF
-format), which include the answers to the questions asked in your RFP,
-and our commercial offer.
+    In reply to your request we are sending you the documents (in PDF
+    format), which include the answers to the questions asked in your RFP,
+    and our commercial offer.
 
-We will wait for your feedback. 
-Thanks for considering us as a software development
-partner for your business.
+    We will wait for your feedback. 
+    Thanks for considering us as a software development
+    partner for your business.
 
-\begin{tikzpicture}[scale=0.05]
-\draw[draw=blue, very thick] (0.18, -42.285)-- (0.18, -42.285) .. controls (7.577, -39.426) and (45.994, -41.576) .. (45.214, -31.292)-- (45.214, -31.292) .. controls (44.411, -20.696) and (15.384, -26.209) .. (8.428, -26.356)-- (8.428, -26.356) .. controls (15.602, -21.968) and (25.198, -21.858) .. (31.979, -17.027)-- (31.979, -17.027) .. controls (38.958, -12.055) and (44.629, 1.104) .. (31.255, -0.662)-- (31.255, -0.662) .. controls (9.089, -3.59) and (10.18, -34.98) .. (10.18, -50.285);
-\draw[draw=blue, very thick] (29.847, -31.452)-- (29.847, -31.452) .. controls (30.969, -33.494) and (29.508, -37.355) .. (29.996, -39.752)-- (29.996, -39.752) .. controls (30.607, -42.748) and (33.711, -42.807) .. (36.289, -42.956)-- (36.289, -42.956) .. controls (40.65, -43.208) and (45.56, -39.731) .. (48.543, -36.724)-- (48.543, -36.724) .. controls (50.966, -34.282) and (52.42, -30.002) .. (53.188, -26.754)-- (53.188, -26.754) .. controls (52.118, -27.988) and (50.917, -30.613) .. (50.05, -32.582)-- (50.05, -32.582) .. controls (49.168, -34.584) and (46.684, -38.086) .. (47.025, -40.264)-- (47.025, -40.264) .. controls (51.303, -40.434) and (54.44, -38.638) .. (57.915, -36.238)-- (57.915, -36.238) .. controls (59.355, -35.244) and (62.038, -34.122) .. (61.45, -31.977)-- (61.45, -31.977) .. controls (58.449, -31.774) and (55.846, -33.583) .. (56.228, -36.938)-- (56.228, -36.938) .. controls (59.665, -37.19) and (63.41, -33.604) .. (64.02, -30.2)-- (64.02, -30.2) .. controls (62.703, -34.583) and (73.319, -27.682) .. (74.104, -27.442)-- (74.104, -27.442) .. controls (74.217, -28.369) and (74.012, -29.247) .. (74.913, -29.643)-- (74.913, -29.643) .. controls (76.688, -30.424) and (78.616, -27.35) .. (78.786, -26.164)-- (78.786, -26.164) .. controls (77.419, -26.954) and (77.757, -29.058) .. (77.892, -30.398)-- (77.892, -30.398) .. controls (80.918, -30.458) and (85.255, -24.477) .. (85.576, -21.421)-- (85.576, -21.421) .. controls (84.353, -22.587) and (84.256, -24.837) .. (83.925, -26.416)-- (83.925, -26.416) .. controls (83.543, -28.241) and (82.28, -30.627) .. (82.513, -32.487)-- (82.513, -32.487) .. controls (82.494, -32.299) and (82.621, -32.246) .. (82.723, -32.061)-- (82.723, -32.061) .. controls (82.527, -31.933) and (82.491, -31.767) .. (82.617, -31.562)-- (82.617, -31.562) .. controls (84.774, -30.705) and (87.247, -30.414) .. (89.463, -29.736)-- (89.463, -29.736) .. controls (93.973, -28.357) and (98.471, -26.816) .. (102.947, -25.332)-- (102.947, -25.332) .. controls (110.614, -22.79) and (118.698, -20.992) .. (126.179, -17.951);
-\end{tikzpicture}
+    \begin{tikzpicture}[scale=0.05]
+    \draw[draw=blue, very thick] (0.18, -42.285)-- (0.18, -42.285) .. controls (7.577, -39.426) and (45.994, -41.576) .. (45.214, -31.292)-- (45.214, -31.292) .. controls (44.411, -20.696) and (15.384, -26.209) .. (8.428, -26.356)-- (8.428, -26.356) .. controls (15.602, -21.968) and (25.198, -21.858) .. (31.979, -17.027)-- (31.979, -17.027) .. controls (38.958, -12.055) and (44.629, 1.104) .. (31.255, -0.662)-- (31.255, -0.662) .. controls (9.089, -3.59) and (10.18, -34.98) .. (10.18, -50.285);
+    \draw[draw=blue, very thick] (29.847, -31.452)-- (29.847, -31.452) .. controls (30.969, -33.494) and (29.508, -37.355) .. (29.996, -39.752)-- (29.996, -39.752) .. controls (30.607, -42.748) and (33.711, -42.807) .. (36.289, -42.956)-- (36.289, -42.956) .. controls (40.65, -43.208) and (45.56, -39.731) .. (48.543, -36.724)-- (48.543, -36.724) .. controls (50.966, -34.282) and (52.42, -30.002) .. (53.188, -26.754)-- (53.188, -26.754) .. controls (52.118, -27.988) and (50.917, -30.613) .. (50.05, -32.582)-- (50.05, -32.582) .. controls (49.168, -34.584) and (46.684, -38.086) .. (47.025, -40.264)-- (47.025, -40.264) .. controls (51.303, -40.434) and (54.44, -38.638) .. (57.915, -36.238)-- (57.915, -36.238) .. controls (59.355, -35.244) and (62.038, -34.122) .. (61.45, -31.977)-- (61.45, -31.977) .. controls (58.449, -31.774) and (55.846, -33.583) .. (56.228, -36.938)-- (56.228, -36.938) .. controls (59.665, -37.19) and (63.41, -33.604) .. (64.02, -30.2)-- (64.02, -30.2) .. controls (62.703, -34.583) and (73.319, -27.682) .. (74.104, -27.442)-- (74.104, -27.442) .. controls (74.217, -28.369) and (74.012, -29.247) .. (74.913, -29.643)-- (74.913, -29.643) .. controls (76.688, -30.424) and (78.616, -27.35) .. (78.786, -26.164)-- (78.786, -26.164) .. controls (77.419, -26.954) and (77.757, -29.058) .. (77.892, -30.398)-- (77.892, -30.398) .. controls (80.918, -30.458) and (85.255, -24.477) .. (85.576, -21.421)-- (85.576, -21.421) .. controls (84.353, -22.587) and (84.256, -24.837) .. (83.925, -26.416)-- (83.925, -26.416) .. controls (83.543, -28.241) and (82.28, -30.627) .. (82.513, -32.487)-- (82.513, -32.487) .. controls (82.494, -32.299) and (82.621, -32.246) .. (82.723, -32.061)-- (82.723, -32.061) .. controls (82.527, -31.933) and (82.491, -31.767) .. (82.617, -31.562)-- (82.617, -31.562) .. controls (84.774, -30.705) and (87.247, -30.414) .. (89.463, -29.736)-- (89.463, -29.736) .. controls (93.973, -28.357) and (98.471, -26.816) .. (102.947, -25.332)-- (102.947, -25.332) .. controls (110.614, -22.79) and (118.698, -20.992) .. (126.179, -17.951);
+    \end{tikzpicture}
 
-\vspace*{-13mm}
-\rule{4.5cm}{0.3mm} \\
-Yegor Bugayenko \\
-Director and Co-Founder \\
-TechnoPark Corp. \\
-568 Ninth Street South 202, \\
-Naples, Florida, US \\
-tel. +1 (239) 935 5429 
+    \vspace*{-13mm}
+    \rule{4.5cm}{0.3mm} \\
+    Yegor Bugayenko \\
+    Director and Co-Founder \\
+    TechnoPark Corp. \\
+    568 Ninth Street South 202, \\
+    Naples, Florida, US \\
+    tel. +1 (239) 935 5429 
 
-\clearpage
-\setcounter{tocdepth}{2}
-\tableofcontents
+    \clearpage
+    \setcounter{tocdepth}{2}
+    \tableofcontents
+<? endif; ?>
 
 \clearpage
 \section{Proposal}
