corrections in formatting

--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/binder.tex
@@ -56,11 +56,11 @@
     \vspace*{-13mm}
     \rule{4.5cm}{0.3mm} \\
     Yegor Bugayenko \\
-    Director and Co-Founder \\
-    TechnoPark Corp. \\
-    568 Ninth Street South 202, \\
-    Naples, Florida, US \\
-    tel. +1 (239) 935 5429 
+    Director and Co-Founder
+    %TechnoPark Corp. \\
+    %568 Ninth Street South 202, \\
+    %Naples, Florida, US \\
+    %tel. +1 (239) 935 5429 
 
     \clearpage
     \setcounter{tocdepth}{2}
