--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
@@ -16,27 +16,27 @@ VAT registration number: not required in USA
 The company, as a group of individuals, has been operating since April 2001 (start of trading). 
 TechnoPark Corp. was incorporated in Florida, USA as 
 \href{http://en.wikipedia.org/wiki/Corporation}{a corporation}, on 20-Feb-2006.
-The company employs 12 full-time and over 70 part-time managers and engineers.
+The company employs 5 full-time and over 70 part-time managers and engineers.
 Company shareholders and directors are:
 
 \begin{tabular}{llll}
 Name & 		Citizenship & 	BoD Position & 	Shares \\
 \hline
 \href{mailto:egor@technoparkcorp.com}{Yegor Bugayenko}	& 	Ukraine &		President & 	50\% \\
-\href{mailto:noah@technoparkcorp.com}{Noah Lieske} &amp;	United States & 	Vice President & 	50\% \\
+\href{mailto:noah@technoparkcorp.com}{Noah Lieske} &	United States & 	Vice President & 	50\% \\
 \end{tabular}
 
-Yegor Bugayenko, 33 y.o, is a certified 
+Yegor Bugayenko, 34 y.o, is a certified 
 Project Management Professional (\href{http://en.wikipedia.org/wiki/Project_Management_Professional}{PMP}), 
 IBM \href{http://www-03.ibm.com/certify/certs/38008003.shtml}{RUP} Certified Solution Designer, 
 \href{http://www.prince2.com/}{PRINCE2} Certified,
 Microsoft Certified Professional (\href{http://www.microsoft.com/learning/mcp/mcp/}{MCP}), 
 OMG Certified UML Professional (\href{http://www.omg.org/uml-certification/}{OCUP}) and 
-Zend Certified PHP Engineer (\href{http://www.zend.com/en/services/certification/}{ZCE}).
+Zend/ZF Certified PHP Engineer (\href{http://www.zend.com/en/services/certification/}{ZCE}/\href{http://www.zend.com/en/services/certification/}{ZFCE}).
 Yegor is responsible for technical aspects of the business, software engineering process
 and quality.
 
-Noah Lieske, 37 y.o.
+Noah Lieske, 38 y.o.
 is a serial enterpreneur doing business since 1997 in 
 e-commerce, co-founder of Intercosmos Media Group (dba \href{http://www.directnic.com}{directNIC.com}) and 
 Xasax Corp. (dba \href{http://www.xasax.com}{xasax.com}). Noah is responsible
