--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/Accounts.tex
@@ -13,19 +13,19 @@ for the last two years:
 	       
 \begin{center}\setstretch{1.2}\small%
 \begin{tabular}{l>{\raggedright}p{6cm}lp{2cm}}
-Project &amp; 		Product scope description &amp; 	Country &amp; 	Staff--hours \\
+Project & 		Product scope description & 	Country & 	Staff--hours \\
 \hline
-Xasax.com &amp; 	Finance market data provider &amp; 	USA &amp;	9000+ \\
-Avivocom &amp; 		B2C web video conferencing tool &amp; 	USA &amp;	2200+ \\
-Kzoot2 &amp; 		Video-audio online chatting 
-			system &amp;				UK &amp;	1650 \\
-Msgwire.com &amp; 	SMS marketing platform &amp; 		USA &amp;	1800 \\
-SendUDirect &amp; 	SMS mass marketing tool &amp;		US &amp;	1500 \\
-SantaFeFilms &amp; 	Social networking video portal &amp;	UK &amp;	1400 \\
-Mamba.ru &amp; 		Video conferencing tool &amp; 		Russia &amp;	1000 \\
-Voipx.com &amp; 	VoIP traffic exchange (trading) &amp; 	USA &amp;	900 \\
-Wikifox.de &amp; 	MediaWiki based search portal &amp; 	Germany &amp;	850 \\
-MySellerSpace &amp; 	Web trading system &amp; 		USA &amp;	680 \\
+Xasax.com & 	Finance market data provider & 	USA &	9000+ \\
+Avivocom & 		B2C web video conferencing tool & 	USA &	2200+ \\
+Kzoot2 & 		Video-audio online chatting 
+			system &				UK &	1650 \\
+Msgwire.com & 	SMS marketing platform & 		USA &	1800 \\
+SendUDirect & 	SMS mass marketing tool &		US &	1500 \\
+SantaFeFilms & 	Social networking video portal &	UK &	1400 \\
+Mamba.ru & 		Video conferencing tool & 		Russia &	1000 \\
+Voipx.com & 	VoIP traffic exchange (trading) & 	USA &	900 \\
+Wikifox.de & 	MediaWiki based search portal & 	Germany &	850 \\
+MySellerSpace & 	Web trading system & 		USA &	680 \\
 \end{tabular}\end{center}
 
 Sometimes projects fail for <?=$this->href('process/risk/risk', 'different reasons')?>. This is a list of 
@@ -35,29 +35,29 @@ for those losses:
 \begin{center}\setstretch{1.2}\small%
 \begin{mpxtabular}{l>{\raggedright}p{7cm}lp{2cm}}
 \tablehead{
-Name &amp; 		Root cause &amp; 			Country &amp; 	Staff--hours \\
+Name & 		Root cause & 			Country & 	Staff--hours \\
 \hline}
-Name &amp; 		Root cause &amp; 			Country &amp; 	Staff--hours \\
+Name & 		Root cause & 			Country & 	Staff--hours \\
 \hline
-MFGaming &amp; 		Requirements provider was not
+MFGaming & 		Requirements provider was not
 			assigned by the Customer and functional
 			requirements were not specified. We
 			failed to create and approve the SRS
-			document, project was terminated. &amp; 
-								UK &amp;	2200 \\
-TipTop &amp; 		Inception phase took too much time due
+			document, project was terminated. & 
+								UK &	2200 \\
+TipTop & 		Inception phase took too much time due
 			to vague business requirements 
 			(over 10 weeks).
 			Customer business motivation in the 
 			project has disappeared during
-			this time, project was terminated. &amp; 
-								Russia &amp;	1400 \\
-Bild.ag &amp; 		Business objectives were not taken
+			this time, project was terminated. & 
+								Russia &	1400 \\
+Bild.ag & 		Business objectives were not taken
 			into account by the project team (e.g., critical market 
 			deadlines) and the software final release
 			was not beneficial to the customer.
 			The project was terminated before reaching
-			its budget potential. &amp; 		Germany &amp;	900 \\
+			its budget potential. & 		Germany &	900 \\
 \end{mpxtabular}\end{center}
 
 In order to keep the level of failed projects low we do 
