--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/CompanyInfo.tex
@@ -47,6 +47,6 @@ TechnoPark is a member of the following trade associations:
     \href{http://www.acm.org}{Association for Computing Machinery (ACM)},
     \href{http://www.pmi.org}{Project Management Institute (PMI)}
 	\href{https://www.bbb.org/online/consumer/cks.aspx?ID=10805219819}{Better Business Bureau (BBB)},
-	\href{http://www.truste.org/ivalidate.php?url=www.technoparkcorp.com&amp;sealid=101}{TRUSTe},
+	\href{http://www.truste.org/ivalidate.php?url=www.technoparkcorp.com&sealid=101}{TRUSTe},
 	\href{http://www.russoft.org}{RusSoft},
 	\href{http://hi-tech.org.ua/Russian/about/members/index.html}{Ukrainian Hi-Tech Initiative}.
