--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/ProjectModel.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/promo/ProjectModel.tex
@@ -148,19 +148,19 @@ dozens of full-time and part-time individuals. The most important project roles 
 
 \newcommand{\theBar}[2]{\tikz{\node[minimum width=#1, minimum height=3mm, draw=tpcBlue, fill=tpcBlue, anchor=east] {} node [right] {#2};}}
 \begin{tabular}{lrl}
-Project Role			&amp; Staff-hours &amp; \\
+Project Role			& Staff-hours & \\
 \hline
-Programmers (3 ppl)		&amp; 400 &amp; \theBar{40mm}{20\%} \\
-Tester (3 ppl)			&amp; 400 &amp; \theBar{40mm}{20\%} \\
-Project Manager			&amp; 260 &amp; \theBar{26mm}{13\%} \\
-Technical Reviewer (3 ppl)	&amp; 200 &amp; \theBar{20mm}{10\%} \\
-Designer			&amp; 180 &amp; \theBar{18mm}{9\%} \\
-Deployment Manager		&amp; 160 &amp; \theBar{16mm}{8\%} \\
-Architect			&amp; 140 &amp; \theBar{14mm}{7\%} \\
-Integrator			&amp; 140 &amp; \theBar{14mm}{7\%} \\
-Management Reviewer		&amp; 60 &amp; \theBar{6mm}{3\%} \\
-Test Analyst			&amp; 40 &amp; \theBar{4mm}{2\%} \\
-Quality Reviewer		&amp; 20 &amp; \theBar{2mm}{1\%} \\
+Programmers (3 ppl)		& 400 & \theBar{40mm}{20\%} \\
+Tester (3 ppl)			& 400 & \theBar{40mm}{20\%} \\
+Project Manager			& 260 & \theBar{26mm}{13\%} \\
+Technical Reviewer (3 ppl)	& 200 & \theBar{20mm}{10\%} \\
+Designer			& 180 & \theBar{18mm}{9\%} \\
+Deployment Manager		& 160 & \theBar{16mm}{8\%} \\
+Architect			& 140 & \theBar{14mm}{7\%} \\
+Integrator			& 140 & \theBar{14mm}{7\%} \\
+Management Reviewer		& 60 & \theBar{6mm}{3\%} \\
+Test Analyst			& 40 & \theBar{4mm}{2\%} \\
+Quality Reviewer		& 20 & \theBar{2mm}{1\%} \\
 \end{tabular}
 
 Key project participants are project manager, architect and integrator. Project manager
