--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/ROM.tex
@@ -14,7 +14,7 @@ We're using our own patent-pending estimating method (based on COCOMO-II,
 three-point estimate and function point analysis).
 According to the estimate
 project size is
-<?=$this->sheet->lowBoundary?>--<?=$this->sheet->highBoundary?>{} staff-hours. 
+\textbf{<?=$this->sheet->lowBoundary?>--<?=$this->sheet->highBoundary?>{} staff-hours}. 
 This means that right now we are ready to start Inception Phase,
 to perform proper requirements analysis, 
 to analyze risks and to re-estimate project cost.
