--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/Vision.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/Vision.tex
@@ -5,9 +5,9 @@
 
 \section*{Vision (preliminary scope statement)}
 
-The project statement is: <?=$this->tex($this->sheet->statement)?>.
+``Project Statement'': <?=$this->tex($this->sheet->statement)?>.
 	
-The product to be developed is: <?=$this->tex($this->sheet->product)?>.
+``Product Statement'': <?=$this->tex($this->sheet->product)?>.
 
 Actors (users of the system) are:
     <?=$this->itemize($this->sheet->actors, 'description')?>{}
