--- a/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/QualityPolicy.tex
+++ b/php/src/application/artifacts/OpportunityRegistry/Opportunity/sheets-collection/templates/proposals/promo/QualityPolicy.tex
@@ -3,6 +3,6 @@
 %% @version $Id$
 %%
 
-TechnoPark Corp. is a proud holder of ISO 9001 certification and
-is looking forward CMMI and ISO 27001 certificates. Our quality policy
+TechnoPark Corp. is a proud holder of \textbf{ISO 9001} certification since 2008, 
+and is looking forward CMMI and ISO 27001 certificates. Our quality policy
 is based on our proprietary patent-pending quality control methods.
